# RecommenderSystem

./: .env.sample  .gitignore  .gitmodules  BaseDatosInicial.sql  Conexion.py  Dockerfile  ImplementacionMediciones.py  LICENSE  Measurements.py  R.session.sql  README.md  README.txt  Recommender.session.sql  Telegram_bot.session.sql  Try.session.sql  Unit3.Microservices-RESTful-APIs-Python.pptx  archivo.json  bd.csv  bot_auxiliar.py  campaigns.json  create_new_data_to_sync.py  docker-compose.yml  esquema.mwb  h.csv  hola.json  index.html  map.html  my.conf  output.csv  pyproject.toml  txt.txt  user.py  variables.py
.github/workflows/: docker-mysql.yml  docker.yml
Model/: BaseDatos.v1.sql  BaseDatos.v2.sql  BaseDatos.v3.sql  BaseDatos.v4.sql  BaseDatos.v5.sql  BaseDatos.v6.sql  BaseDatos.v7.sql  BaseDatosInicial.sql  Dockerfile  esquema.mwb  esquema.mwb.bak  init.sql  my.cnf  new.sql  setup.sh
Model/old/: BaseDatos.v1.sql  BaseDatos.v2.sql  BaseDatos.v3.sql  BaseDatos.v4.sql  BaseDatos.v6.sql
Telegram_bot/: Dockerfile  bot_auxiliar.py  comprobacion.csv  delete_data.sql  deps.py  docker-compose.yml  pyproject.toml  telegram_bot.py
Telegram_bot/Model/: Dockerfile  init.sql
Telegram_bot/Pictures/: CSVFILE.csv
Telegram_bot/crud/: __init__.py  base.py  crud_last_user_position.py  crud_measurement.py  crud_member.py  crud_recommendation.py
Telegram_bot/db/: base.py  init_db.py  session.py
Telegram_bot/models/: Measurement.py  Member.py  Recommendation.py  last_user_position.py
Telegram_bot/schemas/: Measurement.py  Member.py  Recommendation.py  last_user_position.py
docs/: index.html
kubernetes/: api-deployment.yaml  data-volume-persistentvolumeclaim.yaml  mysql-deployment.yaml
kubernetes/configmaps/: env-configmap.yaml
kubernetes/deployments/: api-deployment.yaml  mysql-deployment.yaml
kubernetes/ingresses/: ingress.yaml
kubernetes/services/: api-service.yaml  mysql-service.yaml
kubernetes/volumen/: api-claim0-persistentvolumeclaim.yaml  data-volume-persistentvolumeclaim.yaml
mve/: pyproject.toml
src/: Conexion.py  Connexion.py
src/Priotity Measurements/: ImplementacionMediciones.py  variables.py
src/PriotityMeasurements/: Calculo_de_prioridades.py  Calculo_prioridades_dinamicas.py  Dinamica_de recursos.py  Dinamica_de_recursos.py  ImplementacionMediciones.py  example_data.csv  example_data_con_colores.csv
src/Servicio/: .flake8  README.md  alembic.ini  prestart.py  run.sh
src/Servicio/Telegram_bot/: telegram_bot.py
src/Servicio/alembic/: env.py
src/Servicio/app/: backend_pre_start.py  deps.py  funtionalities.py  initial_data.py  keys.py  main.py
src/Servicio/app/Demo/: Demo.py  List_trayectorias.py  List_users.py  (+9 more)
src/Servicio_intento/app/: Clases.py  main.py
(+149 files in other folders)
