[tool.poetry]
name = "mve"
version = "1.0"
description = ""
authors = ["mpuerta004 <mpuerta004@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^2.1.1"
mysql = "^0.0.3"
mysql-connector-python = "^8.0.31"
geoalchemy2 = "^0.12.5"
numpy = "^1.24.1"
fastapi = "^0.89.1"
fastapi-utils = "^0.2.1"
jinja2 = "^3.1.2"
uvicorn = "^0.20.0"
apscheduler = "^3.9.1.post1"
folium = "^0.14.0"
vincenty = "^0.1.4"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
