[tool.poetry]
name = "recommendersystem"
version = "0.3.0"
description = "Micro-voluntering engine"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
fastapi-utils = "0.2.1"
numpy = "^1.26.3"
SQLAlchemy = "1.4.51"
geoalchemy2 = "^0.14.3"
apscheduler = "^3.10.4"
mysql = "^0.0.3"
mysql-connector-python = "^8.2.0"
folium = "^0.15.1"
geopy = "^2.4.1"
pandas = "^2.1.4"
uvicorn = "^0.25.0"
vincenty = "^0.1.4"
tzlocal  =  "5.2"
timezonefinder = "^6.2.0"
python-multipart = "^0.0.6"
matplotlib = "^3.8.2"
telebot = "^0.0.5"
ipython = "^8.20.0"
flask = "^3.0.1"

[tool.poetry.group.dev.dependencies]
folium = "^0.15.1"
vincenty = "^0.1.4"
APScheduler = "^3.10.4"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
